# mycampus-hub

./: Coding_rules.md  README.md  pyproject.toml
ai-agent-from-scratch/: .gitignore  README.md  app.py
autogen-code-agent/: README.md  app.py
email-ai-agent/: README.md  agent.py  app.py  markdown.md  pyproject.toml
